# Portfolio_Manager

./: .gitignore  A - Leia-me Quando eu for iniciar uma nova etapa.docx  A-1 NEXT_STEPS.md  CHANGELOG.md  LICENSE  README.md  build.bat  configure_git.bat  final_push.bat  installer.iss  main.py  push_to_github.bat  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  release.yml
application/: __init__.py  position_calculator.py  tax_calculator.py  use_cases.py
domain/: __init__.py  entities.py  enums.py  value_objects.py
infrastructure/: __init__.py  database.py  price_provider.py  repositories.py  write_queue.py
reports/: __init__.py  pdf_generator.py  report_export.py
reports/templates/: portfolio_report.html
tests/: test_position_calculator.py  test_rebuild.py  test_tax_calculator.py  test_value_objects.py
ui/: __init__.py  asset_ledger.py  b3_reconciliation.py  corporate_action_dialog.py  custody_view.py  dashboard.py  main_window.py  styles.py  table_models.py  transaction_dialog.py
