[project]
name = "portfolio"
version = "1.0.0"
description = "Sistema de Controle de Portfólio de Investimentos"
requires-python = ">=3.11"
authors = [
    {name = "Marcus Aleks"}
]
license = {text = "MIT"}
readme = "README.md"
dependencies = [
    "PySide6>=6.5",
    "SQLAlchemy>=2.0",
    "babel>=2.12",
    "reportlab>=4.0",
    "Jinja2>=3.1",
    "matplotlib>=3.7",
    "yfinance>=0.2",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pyinstaller>=6.0"]

[project.urls]
Homepage = "https://github.com/marcusaleks/portfolio"
Repository = "https://github.com/marcusaleks/portfolio"
Issues = "https://github.com/marcusaleks/portfolio/issues"

[project.scripts]
portfolio = "main:main"

